[package]
name = "callbag-from-iter"
version = "0.12.0"
authors = ["Teoh Han Hui <teohhanhui@gmail.com>"]
edition = "2021"
description = "An implementation of the callbag spec"
repository = "https://github.com/teohhanhui/callbag-rs"
license = "MIT OR Apache-2.0"
keywords = ["frp", "iterable", "observable", "reactive", "stream"]
categories = ["asynchronous", "concurrency"]

[dependencies]
callbag-core = { path = "../callbag-core", version = "0.12.0" }

[dev-dependencies]
arc-swap = "1.5.0"
test_utils = { path = "../test_utils" }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = "0.3.28"
